[gd_scene load_steps=20 format=3 uid="uid://dkrt4twau3rbt"]

[ext_resource type="Script" path="res://components/cards/draggable_card.gd" id="1_c01rp"]
[ext_resource type="PackedScene" uid="uid://doa41q24r2eid" path="res://components/cards/card.tscn" id="2_pf1w1"]
[ext_resource type="Script" path="res://components/units/UnitDictionary/unit_stats.gd" id="3_a782e"]
[ext_resource type="Texture2D" uid="uid://jyht0bycll06" path="res://art/cards/card_art/card-template.png" id="4_wclge"]
[ext_resource type="Texture2D" uid="uid://b5p1xc0bcs58e" path="res://art/cards/card_art/basic_heal.png" id="5_rclin"]
[ext_resource type="Script" path="res://components/cards/CardFunctions/healing_card.gd" id="6_0yxrx"]
[ext_resource type="PackedScene" uid="uid://fkpnfc8tmhkj" path="res://components/card_and_unit_area_detection.tscn" id="7_pm1nj"]
[ext_resource type="AudioStream" uid="uid://cenkn62k76yu2" path="res://audio/failed_card_drop.wav" id="8_1en12"]
[ext_resource type="AudioStream" uid="uid://cryacle32jqt3" path="res://audio/Gem_Grab_02.ogg" id="9_3ymh3"]
[ext_resource type="AudioStream" uid="uid://cymvfrmdcgcen" path="res://audio/Gem_Grab_03.ogg" id="10_r4w0d"]

[sub_resource type="Resource" id="Resource_uu36b"]
resource_local_to_scene = true
script = ExtResource("3_a782e")
stats = {
"endurance": 4,
"finesse": 3,
"health": 50,
"knowledge": 0,
"max_health": 50,
"muscle": 5,
"nuance": 0
}

[sub_resource type="Resource" id="Resource_5ivqc"]
resource_local_to_scene = true
script = ExtResource("6_0yxrx")
card_name = "Basic Heal"
one_use = true
targets_self = true
base_value = 5
play_cost = 1
card_description = "Restore %s health"
tool_tip = "Restore health up to your maximum limit, healing increases based on %s."
debuff_value = 0
hide_cost = false
can_use_whenever = false
can_use_to_respond = false
card_owner = SubResource("Resource_uu36b")
accepts_card_types = Array[int]([])
card_type = 0
primary_stat = "nuance"
secondary_stat = "knowledge"
icon_image = ExtResource("5_rclin")
card_skin = ExtResource("4_wclge")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cvqo"]
size = Vector2(57, 84)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2nelj"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("8_1en12")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3vs02"]
streams_count = 2
stream_0/stream = ExtResource("9_3ymh3")
stream_1/stream = ExtResource("10_r4w0d")

[sub_resource type="Animation" id="Animation_vs58c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kf07f"]
resource_name = "burn"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1e-05, 0.95), Vector2(1.2, 1.2), Vector2(0.7, 0.7)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"swapToBurnBack"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ewmvp"]
resource_name = "discard"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1e-05, 0.95), Vector2(1.2, 1.2), Vector2(0.7, 0.7)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"swapToDiscardBack"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f3ywh"]
_data = {
"RESET": SubResource("Animation_vs58c"),
"burn": SubResource("Animation_kf07f"),
"discard": SubResource("Animation_ewmvp")
}

[node name="DraggableCard" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 8
script = ExtResource("1_c01rp")

[node name="Card" parent="." instance=ExtResource("2_pf1w1")]
layout_mode = 1
offset_left = -96.0
offset_top = -192.0
offset_right = 96.0
offset_bottom = 64.0
card_stats = SubResource("Resource_5ivqc")

[node name="TwoWayDetection" parent="." instance=ExtResource("7_pm1nj")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TwoWayDetection"]
position = Vector2(1.5, -61)
shape = SubResource("RectangleShape2D_7cvqo")

[node name="ErrorSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_2nelj")

[node name="SuccessSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_3vs02")
pitch_scale = 1.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f3ywh")
}

[connection signal="gui_input" from="." to="." method="event_on_card"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="new_overlap_acquired" from="TwoWayDetection" to="." method="check_drop_spot_validity"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="animation_handler"]
